--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
+/*reset*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/*COMMON*/
 body {
     font-family: "Roboto";
 }
@@ -21,12 +23,14 @@ img {
 #button {
     font-size: 11px;
     color: white;
+    text-decoration: none;
     border: 1px solid #fe775a;
     background-color: #fe775a;
     padding: 7px 8px;
     border-radius: 5px
 }
 
+/*HEADER*/
 .nav-top {
     background-color: #f4f9fd;
     border-bottom: 1px solid #4a606e;
@@ -82,5 +86,46 @@ img {
 
 .logo img {
     width: 80px;
-    padding: 20px 0px;
+    padding-top: 18px;
+}
+
+.nav-bottom .fa-chevron-down {
+    padding-left: 7px;
+}
+
+/*banner*/
+.banner {
+    height: 460px;
+}
+
+.banner .img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+h1 {
+    margin-left: 0;
+    width: 50%;
+    font-size: 40px;
+    color: #33475b;
+}
+
+.teaser .text {
+    color: #33475b;
+    width: 50%;
+    font-size: 13px;
+    padding: 28px 0px;
+}
+
+.teaser #button {
+    padding: 15px 30px;
+    display: inline-block;
+}
+
+.subtext {
+    color: #33475b;
+    width: 50%;
+    font-size: 11px;
+    padding: 28px 0px;
 }
