--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,19 @@ img {
     border-radius: 5px
 }
 
+h1, h2, h3, h4 {
+    color: #33475b;
+}
+h1 {
+    margin-left: 0;
+    width: 50%;
+    font-size: 40px;
+}
+
+h2 {
+    text-align: center;
+}
+
 /*HEADER*/
 .nav-top {
     background-color: #f4f9fd;
@@ -38,6 +51,11 @@ img {
 
 .wrap{
     width: 70%;
+    margin: auto;
+}
+
+.wrap2{
+    width: 80%;
     margin: auto;
 }
 
@@ -93,6 +111,19 @@ img {
     padding-left: 7px;
 }
 
+.list {
+    list-style-type: none;
+    text-decoration: none
+}
+
+.list li {
+    display: inline-block;
+    font-size: 13px;
+    text-decoration: none;
+    color: #33475b;
+    padding: 25px 30px 0px 0px;
+}
+
 /*banner*/
 .banner {
     height: 540px;
@@ -104,13 +135,6 @@ img {
     object-fit: cover;
     width: 100%;
     height: 100%;
-}
-
-h1 {
-    margin-left: 0;
-    width: 50%;
-    font-size: 40px;
-    color: #33475b;
 }
 
 .teaser {
@@ -152,7 +176,7 @@ h1 {
 
 .illustration {
     width: auto;
-    height: 200px;
+    height: 180px;
     padding: 40px 0px 5px 0px;
     margin: 0 auto;
 }
@@ -162,16 +186,61 @@ h1 {
     object-fit: contain;
 }
 
-h2 {
-    color: #33475b;
-    text-align: center;
-}
-
 .text-subsection {
     text-align: center;
 }
 
 .text-subsection .text {
     width: 100%;
-    padding: 25px 80px 
+    padding: 25px 0px 45px 0px;
+}
+
+.second-subsection {
+    background-color: white;
+    
+    border-radius: 5px;
+}
+
+.second-subsection .menu-left {
+    width: 28%;
+    padding: 50px 0px;
+    text-align: left;
+}
+
+.second-subsection .menu-right {
+    width: 72%;
+    text-align: left;
+    padding: 50px 0px;
+}
+
+.book {
+    width: 130px;
+    text-align: left;
+}
+
+.second-subsection .text {
+    width: 100%;
+    padding-bottom: 20px;
+}
+
+.second-subsection #button {
+    padding: 20px 26px;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.second-subsection .h4 {
+    display: inline-block;
+}
+
+.line {
+    border: 1px solid #33475b;
+    width: 300px;
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.fa-check-circle {
+    color: #fe775a;
+    padding-right: 8px;
 }
