--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,7 @@ h2 {
 
 .final-section {
     background-color: #324a5b;
+    color: white;
 }
 
 .final-section .col {
@@ -489,18 +490,43 @@ h2 {
 
 /*second line*/
 .languages li{
-    padding: 8px;
+    padding: 8px ;
     display: inline-block
 }
 
 .languages {
     text-align: center;
-    padding: 40px 0px 10px 0px;
 }
 
 .second-line .line {
     border: 0.8px solid white;
-    width: 886px;
-    padding: 0%;
+    width: 100%;
     margin: auto;
+}
+
+/*copyright*/
+.copyright .wrap {
+    padding: 20px 0px 5px 0px;
+}
+
+.copyright .menu-left {
+    width: 25%;
+}
+
+.copyright .menu-right{
+    width: 75%;
+}
+
+.copyright img {
+    width: 35%;
+    padding: 5px 0px;
+}
+
+.copyright p{
+    font-size: 13px;
+    padding-bottom: 30px;
+}
+.copyright li {
+    display: inline-block;
+    padding-left:  20px;
 }
